# nyx

./: MANIFEST.in  README.rst  gitignore  pyproject.toml  tox.ini
docs/: conf.py  index.rst
examples/: Differential_Fitting.ipynb  Differential_Fitting_Pointing.ipynb  Emitter.ipynb  Idea.ipynb  MCMC_Demo.ipynb  Optax.ipynb  Scenes.ipynb  Test.ipynb  Tutorial.ipynb  absorption.txt  ct1_pixel_assignment.txt  lmfit.ipynb  rendering.ipynb  stars.ipynb
licenses/: LICENSE.rst
nyx/: .cruft.json  .gitignore  __init__.py
nyx/atmosphere/: __init__.py  airmass.py  atmospheres.py  scattering.py
nyx/core/: __init__.py  config.py  coordinates.py  healpix.py  integrator.py  interpolation.py  model.py  scene.py  spectral.py
nyx/emitter/: airglow.py  emitters.py  moon.py  stars.py  zodiacal.py
nyx/instrument/: instruments.py
nyx/units/: __init__.py  converter.py  implementation.ipynb  specification.py  types.py
nyx/utils/: interpolator.py  spectra.py
