[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nyx"
description = ""
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Gerrit Roellinghoff", email = "gerrit.roellinghoff@fau.de" },
]
dependencies = [
    "histlite",
    "numpy",
    "scikit-learn",
    "scipy",
    "astropy",
    "healpy",
    "dust_extinction",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["nyx*"]
exclude = ["nyx._dev*"]

[tool.setuptools_scm]
version_file = "nyx/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "nyx",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["nyx[\\/]_dev"]

[tool.coverage.run]
omit = [
 "nyx/__init*",
 "nyx/conftest.py",
 "nyx/*setup_package*",
 "nyx/tests/*",
 "nyx/*/tests/*",
 "nyx/extern/*",
 "nyx/version*",
 "*/nyx/__init*",
 "*/nyx/conftest.py",
 "*/nyx/*setup_package*",
 "*/nyx/tests/*",
 "*/nyx/*/tests/*",
 "*/nyx/extern/*",
 "*/nyx/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
